--- a/rapport.tex
+++ b/rapport.tex
@@ -62,10 +62,10 @@
 
 \section{Introduction}
 
-J'ai réalisé mon alternance de Master 2 Ingénierie logiciel au sein du rectorat de l'académie de rennes du 09 septembre 2018 au 30 août 2019. J'ai intégré la DSII (Direction des Systèmes d'Information et de l'Innovation) et plus précisément le pôle DINAMO (Développement et INtégration en environnement Académique ou Mutualisé) encadré par Annabel BOURDÉ et Gaël SALAÜN. Ce pôle s'occupe généralement de développer et maintenir des applications web national utilisées par les chefs des établissement, les élèves  ou leurs parents et aussi des applications métiers dédiés aux employés du rectorat.\newline
+J'ai réalisé mon alternance de Master 2 ingénierie logiciel au sein du rectorat de l'académie de Rennes du 09 septembre 2018 au 30 août 2019. J'ai intégré la DSII (Direction des Systèmes d'Information et de l'Innovation) et plus précisément le pôle DINAMO (Développement et INtégration en environnement Académique ou Mutualisé) encadré par Annabel BOURDÉ et Gaël SALAÜN. Ce pôle s'occupe généralement de développer et maintenir des applications web national utilisées par les chefs des établissement, les élèves  ou leurs parents et aussi des applications métiers dédiés aux employés du rectorat.\newline
 
 
-Durant mon alternance, j'ai eu pour principale mission d'intégrer un outil de documentation interactive dans les applications du rectorat. Le travail consistait à trouver une solution qui permet aux administrateurs des applications d'être autonomes et pouvoir rajouter la documentation sans utiliser du code informatique. Nous avons réaliser cette solution ainsi réaliser une interface graphique utilisée par ces administrateurs, j'ai donc eu la chance de pouvoir développer aussi bien sur le back-end que sur le front-end.\newline   
+Durant mon alternance, j'ai eu pour principale mission d'intégrer un outil de documentation interactive dans les applications du rectorat. Le travail consistait à trouver une solution qui permet aux administrateurs des applications d'être autonomes et pouvoir rajouter la documentation sans utiliser du code informatique. Nous avons réaliser cette solution ainsi implémenter une interface graphique utilisée par ces administrateurs, j'ai donc eu la chance de pouvoir développer aussi bien sur le back-end que sur le front-end.\newline   
 
 C'était une première expérience en tant qu'apprenti dans une entreprise, cela m'a permis d'acquérir des nouvelles méthodes de travail comme l'agilité et de plus j'ai pu travaillé sur des des concepts innovants ainsi qu'utiliser des technologies et outils actuels.\newline
 
@@ -152,7 +152,7 @@ L'équipe informatique utilise Git sur la plateforme Gitlab hébergée par la Fo
 
 \subsection{Contexte et Problématique}
 
-La DSII (direction des systèmes d'information et d'innovation (DSII) et plus précisément l'équipe DNIAMO utilise plusieurs façons pour documenter leur applications. La plupart du temps elle utilise une documentation écrite (Manuel Utilisateur), une chose qui ne rend pas facile aux utilisateurs de se documenter sur l'appli à cause de contrainte de temps. 
+La DSII (Direction des Systèmes d'Information et d'Innovation et plus précisément l'équipe DINAMO utilise plusieurs façons pour documenter leur applications. La plupart du temps elle utilise une documentation écrite (Manuel Utilisateur), une chose qui ne rend pas facile aux utilisateurs de se documenter sur l'appli à cause de contrainte de temps. 
 
 
 C'est pour cette raison que Monsieur JOSSO Clément,le product Owner du projet(PO), a voulu mettre en œuvre une documentation interactive dans l'application métier Solycee afin de faciliter l’accès de la documentation à ces utilisateurs et d'interagir directement avec la page web. Nous avons utilisé un outil nommé BootstrapTour pour réaliser cette documentation. 
@@ -188,7 +188,7 @@ Le projet se constitue d'une interface utilisateur qui est une application web (
 \item \textbf{Java: }Langage du développement du Back-end de Solycee. 
 \item \textbf{Kotlin: }Langage du développement de l'API Rest AppTour.
 \item \textbf{Maven: }Construction des projets Java et Kotlin du Back-end.
-\item \textbf{Spring: }Spring est un framework libre pour construire et définir l'infrastructure d'une application java dont il facilite le développement et les tests
+\item \textbf{Spring: }Spring est un framework libre pour construire et définir l'infrastructure d'une application java dont il facilite le développement et les tests. Le concept fondamental du Spring, qui fait sa force, est l'injection des dépendances (dependency injection).
 \item \textbf{Spring Boot: }Framework d'infrastructure des Back-end.
 \item \textbf{Hibernate: } Framweork 
 \item \textbf{Spring Security: }Spring Security est un Framework de sécurité léger qui fournit une authentification et un support d’autorisation afin de sécuriser les applications Spring.
@@ -197,27 +197,6 @@ Le projet se constitue d'une interface utilisateur qui est une application web (
 
 \end{enumerate}
 
-\subsubsection{Back-end}
-
-Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framework Spring-boot et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
-
-L'architecture des projets du rectorat est unique dans tous les projets afin  de faciliter la prise en main de ces derniers et avoir le même point de vue au sein du l'équipe.
-
-Le Back-end des applications se décompose de plusieurs couches: \newline
-
-Une couche Repository/DAO: Repositories sont des interfaces héritant de l'interface Repository. L'objectif de ces interfaces consiste à rendre la création de la couche d'accès aux données (requêtes SELECT, UPDATE...) plus rapide.\newline
-
-
-Une couche Service: Elle permet de séparer les opérations effectuées par le contrôleur et celles qui concernent le modèle des données. Toute action devrait passer par cette couche.\newline
-
-
-Une couche Contrôller: Il s'agit de l'API qui permet de répondre à toutes les requêtes envoyées par le client. 
-
-\begin{figure}[H]
-	\centering
- 		\includegraphics[width=1\textwidth]{diagrammes/ArchitectureProjet.png}
-  		\caption{Arichtecture Back-end d'une application web}
-	\end{figure}
 
 \section{Objectifs et missions de l'alternance}
 
@@ -225,25 +204,32 @@ Une couche Contrôller: Il s'agit de l'API qui permet de répondre à toutes les
 
 Solycee est une application métier créée par le pôle DINAMO et destinée à la gestion des offres et demandes de stages. Elle permet aux collèges et aux lycées d'inscrire leurs élèves dans des mini-stages proposés par les lycées.  
 
-L'application serveur est réalisé en Java avec l'utilisation des composants du framework Spring.L'interface est codé avec le triplet HTML,CSS \& Javascript en intégrant du Thymeleaf pour le traitement des vues.  
+L'application serveur est réalisée en Java avec l'utilisation des composants du framework Spring.L'interface est codée avec le triplet HTML,CSS \& Javascript, les vues sont basées sur Thymleaf. 
+\subsubsection{Architecture de l'application Solycee}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9 \textwidth]{diagrammes/archiSolycee.png}
+    \caption{Architecture logicielle de l'application Solycee }
+\end{figure}
 
 \subsubsection{Aspect technique}
 
-Le projet est implémenté selon le patron de conception MVC et réalisé avec plusieurs technologies, la plupart de ces dernières sont open-source.L'application est implémenté avec un back-end et un Front-end.
+Le projet est implémenté selon le patron de conception MVC et réalisé avec plusieurs technologies, la plupart de ces dernières sont open-source.L'application est implémentée avec un Back-end et un Front-end.
 
-Le back-end a été implémenté avec le framework Spring et le langage Java. Le coté interface (Front-end) a été réalisé avec le moteurs de templâte Thymeleaf. 
+Le Back-end a été implémenté avec le framework Spring et le langage Java. Le coté interface (Front-end) a été réalisé avec le moteur de template Thymeleaf. 
 
 Voici maintenant une présentation plus précise sur les principaux outils utilisés:\newline
 
 \textbf{Spring:}  Spring est un framework libre pour construire et définir l'infrastructure d'une application java dont il facilite le développement et les tests.\newline
 
 \begin{itemize}
-	\item \textbf{Spring MVC} : Spring MVC est un framwork qui permet d’implémenter des applications selon le design pattern MVC. Donc, comme tous autre MVC framework, Spring MVC se base sur le principe décrit par le schéma ci-dessous :\newline
+	\item \textbf{Spring MVC} : Spring MVC est un framework qui permet d’implémenter des applications selon le design pattern MVC. Spring MVC se base sur le principe décrit par le schéma ci-dessous :\newline
 	
 
 \begin{figure}[H]
 	\centering
- 		\includegraphics[width=1\textwidth]{diagrammes/mvc.jpg} 
+ 		\includegraphics[width=1\textwidth]{diagrammes/mvc2.jpg} 
   		\caption{Schéma du patron de conception MVC}
 	\end{figure}
 	
@@ -252,15 +238,18 @@ Voici maintenant une présentation plus précise sur les principaux outils utili
 
 \textbf{Maven:} Maven est un outil de construction de projets (build) open source développé par la fondation Apache. Il permet de faciliter et d'automatiser certaines tâches de la gestion d'un projet Java.\newline
 
-\textbf{Thymeleaf:} Thymeleaf est un  Java XML/XHTML/HTML5 Template Engine qui peut travailler à la fois dans des environnements Web (Servlet) et celui de non Web. Il est mieux adapté pour diffuser XHTML/HTML5 sur View (View Layer) des applications Web basées sur MVC. Mais il peut traiter n'importe quel fichier XML même dans les environnements hors ligne. Il fournit une intégration complète de Spring Framework. 
+\textbf{Thymeleaf:} Thymeleaf est un Java XML/XHTML/HTML5 Template qui apporte le concept de templates naturels en utilisant des attributs HTML spécifiques. Ce framework apporte aussi une séparation entre l'affichage et le contenu.\\
+
+Thymeleaf s’intègre très facilement dans un projet Spring et permet de diffuser XHTML/HTML5 sur la vue des applications WEB.
 
 \subsubsection{Travail réalisé}
 
-Dans le projet Solycee, j'ai principalement travaillé sur la partie Front-end. J'ai réalisé plusieurs tâches soit en rajoutant des nouvelles vue et des nouveaux composants dans les pages web et/ou en rajoutant des nouvelles fonctionnalités sur les composants existant.
+\textbf{(TODO)!!!}
+Dans le projet Solycee, j'ai principalement travaillé sur la partie Front-end. J'ai réalisé plusieurs tâches soit en rajoutant des nouvelles vues et des nouveaux composants dans les pages web et/ou en rajoutant des nouvelles fonctionnalités sur les composants existants.
 
-Le projet a été développé par l'équipe Dinamo. Avant de commencer à réaliser les tâches demandées, il était nécessaire de procéder un travail  de lecture du code implémenté et de la compréhension de ce dernier en posant des multiples questions à mes maîtres d'alternances. Il m'a fallut aussi comprendre l'architecture du projet ainsi que les technologies utilisées. 
+Le projet a été développé par l'équipe Dinamo. Avant de commencer à réaliser les tâches demandées, il était nécessaire de procéder un travail  de lecture du code implémenté et de la compréhension de ce dernier en posant des multiples questions à mes maîtres d'alternances. Il m'a fallu aussi comprendre l'architecture du projet ainsi que les technologies utilisées. 
 
-Une fois que le code était compréhensible et j'ai acquis toutes les informations importantes sur le projet, j'ai commencé à réalisé les tâches demandées.  Voici une présentation plus précises de toutes les tâches réalisées:   
+Une fois que le code était compréhensible et j'ai acquis toutes les informations importantes sur le projet, j'ai commencé à réaliser les tâches demandées.  Voici une présentation plus précise de toutes les tâches réalisées:   
 
 
 \begin{itemize}
@@ -287,7 +276,7 @@ Pour que ça soit pas dérangeant pour les utilisateurs qu'ils ont déjà vu la 
 \begin{figure}[H]
 	\centering
  		\includegraphics[width=1\textwidth]{diagrammes/aideNonDispo.png} 
-  		\caption{Pas de tour disponible dans ce page Web }
+  		\caption{Pas de tour disponible dans cette page Web }
 	\end{figure}
     
 
@@ -308,7 +297,7 @@ Il existe un bouton valider dans la modal qui  permet soit de rajouter la nouvel
 \end{itemize}
 
 \subsection{AppTour}   
-
+\todo{(TODO)!!!}
 Au début du projet, j'ai commencé par manipuler BootstrapTour sur l'application Solycee en rajoutant le code de la librairie dans le front de Solycee (code en javascript avec les étapes souhaités). Bootstrap tour permet d'afficher l'étape du tour et aussi passer à l'étape suivante ou précédente ainsi que arrêter le tour avec le bouton "Fin".
 
 Cette manipulation est simple et efficace pour un développeur pour rajouter des tours et leurs étapes afin de faire une visite d'application. Il suffit juste de manipuler le code Javascript. Chose qui n'est pas facile pour d'autres personnes ou les administrateurs de l'application.
@@ -317,9 +306,29 @@ AppTour est un web service qui permet aux administrateurs des applications du re
 
 API Apptour est une application Sring Boot codé en langage Kotlin. Le but de cette application est d’implémenter plusieurs  services afin de permettre aux administrateurs des autres applications de rajouter et modifier les étapes. 
 
+\subsubsection{Architecture de l'API AppTour}
+\todo{(TODO)!!!}
+Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framework Spring-boot et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
 
+L'architecture des projets du rectorat est unique dans tous les projets afin  de faciliter la prise en main de ces derniers et avoir le même point de vue au sein du l'équipe.
+
+Le Back-end des applications se décompose de plusieurs couches: \newline
+
+Une couche Repository/DAO: Repositories sont des interfaces héritant de l'interface Repository. L'objectif de ces interfaces consiste à rendre la création de la couche d'accès aux données (requêtes SELECT, UPDATE...) plus rapide.\newline
+
+
+Une couche Service: Elle permet de séparer les opérations effectuées par le contrôleur et celles qui concernent le modèle des données. Toute action devrait passer par cette couche.\newline
+
+
+Une couche Contrôller: Il s'agit de l'API qui permet de répondre à toutes les requêtes envoyées par le client. 
+
+\begin{figure}[H]
+	\centering
+ 		\includegraphics[width=1\textwidth]{diagrammes/ArchitectureProjet.png}
+  		\caption{Arichtecture Back-end d'une application web}
+	\end{figure}
 \subsubsection{Aspect technique}
- 
+ \todo{(TODO)!!!}
  Le projet AppTour était initialiser par l'alternant de l'année dernière. j'ai commencé par la relecture du code et la compréhension de l'existant. L'application a été implémenté en Kotlin qui est un langage de programmation orienté objet et fonctionnel, avec un typage statique qui permet de compiler pour la machine virtuelle Java et JavaScript et Spring boot qui est un framework utilisé afin de faciliter la configuration d'un projet Spring et de réduire le temps alloué au démarrage d'un projet. plusieurs autres technologies était utilisées dans ce projet : 
  
 \begin{itemize}
@@ -334,7 +343,7 @@ API Apptour est une application Sring Boot codé en langage Kotlin. Le but de ce
 \end{itemize}
 
 \subsubsection{Travail réalisé}
-
+\todo{(TODO)!!!}
 Dans le projet AppTour, j'ai travaillé sur la réalisation d'une API web (Le back-end pour le bootstrapt), j'ai développé plusieurs Web Services qui permets de rajouter ou modifier les étapes des tours ainsi que faire des recherches pour vérifier l’existence des tours. 
 
 Comme noté plus haut, le projet AppTour était initialiser par l'alternant de l'année dernière en créant les tables (Entity). Il existait deux tables, une table Tour et une table Step. j'ai commencé donc par la relecture du code existant et la modification des tables.
@@ -387,7 +396,6 @@ Il existe aussi une classe StepService : Dans cette classe, j'ai réalisé plusi
 \item findOrdreMax : Elle permet de lister tout les step d'un tour par ordre croissant.  
 \end{itemize}
 \end{itemize}
-\newpage
 \subsection{Partie Sécurité}
 \subsubsection{Permettre seuls aux administrateurs de modifier les tours}
 
@@ -427,7 +435,5 @@ En suite, j'ai fait des recherches pour trouver une libraire JavaScript qui perm
 
 \newpage
 \section{Annexes}
-
-Nous trouverons dans cette partie tout les éléments graphiques, schémas, diagrammes,parties de code  qui n’ont pas pu être ajouté au rapport faute de place.
 
 \end{document}
